# 123tv-iptv

./: .flake8  123tv_iptv.py  Dockerfile  README.md  __init__.py  channels.json  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  dev_build.yml  docker.yml  release.yml  tests.yml
gui/: app.py  paths.py  settings.py  utils.py
gui/icons/: icon.icns
scripts/: build.py
