[flake8]
max-line-length = 110
per-file-ignores =
    # module imported but unused
    __init__.py:F401,

[mypy]
ignore_missing_imports = true
files = 123tv_iptv.py
explicit_package_bases = true
namespace_packages = true
strict = true

[metadata]
name = 123tv-iptv
author = Andy Trofimov
author_email = interlark@gmail.com
license = MIT
keywords = 123tv,iptv,m3u8,playlist,tvguide,english
url = https://github.com/interlark/123tv-iptv
description = 123TV Free IPTV
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Internet
    Topic :: Utilities
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = 
    tv123_iptv
package_dir =
    tv123_iptv = .
install_requires =
    aiohttp>=3.8.1
    tqdm>=4.64.0
    netifaces>=0.11.0
    furl>=2.1.3
    pyaes>=1.6.1
    typing_extensions>=3.7.4; python_version<"3.8"
python_requires = >=3.7.4

[options.package_data]
tv123_iptv = channels.json

[options.entry_points]
console_scripts = 123tv-iptv = tv123_iptv:main

[options.extras_require]
dev =
    wheel>=0.36.2,<0.38
    flake8>=4.0.1
    mypy>=0.961
